# Softdesk

./: .gitignore  README.md  cahierdescharges.py  db.sqlite3  pyproject.toml
.github/: dependabot.yml
accounts/: apps.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_age.py  0003_alter_customuser_age.py  0004_alter_customuser_can_be_contacted_and_more.py
comment/: models.py
comment/migrations/: 0001_initial.py  0002_initial.py
contributor/: models.py
contributor/migrations/: 0001_initial.py  0002_initial.py
issue/: models.py
issue/migrations/: 0001_initial.py
project/: admin.py  models.py  permissions.py  serializers.py  views.py
project/migrations/: 0001_initial.py  0002_contributor_unique_project_contributor.py  0003_alter_issue_status.py  0004_alter_comment_author_alter_issue_author_and_more.py
softdesk/: settings.py  urls.py
users/: apps.py  models.py
users/migrations/: 0001_initial.py  0002_customuser_age_customuser_can_be_contacted_and_more.py
