[project]
name = "softdesk"
version = "0.1.0"
description = ""
authors = [
    {name = "MaximeJB",email = "maxym.jb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt[crypto] (>=5.5.1,<6.0.0)",
    "drf-nested-routers (>=0.94.2,<0.95.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

